# PettingZoo

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  base_c5000_g1.txt  build.sh  compare.sh  defs.py  example.c  fullrebuild.sh  game.py  levelgen.py  main.py  new_c50000_g1.txt  pad.py  play_game.py  pytorch_dqn.py  renderer.py  requirements.txt  runGenAlgo.py  run_genetic_algo.py  run_select_mutation.py  test.txt  test_breed.py  test_cnn.py  test_dqn.py  test_genetic_algo.py  test_genetic_algo_V3.py  test_nn.py  watch_model.py
game/: RenderObjs.py  __init__.py  defs.py  game.py  levelgen.py  obstacles.py  renderer.py
game/core/: Vector2.py  defs.py  levelgen.py  logic.py
game/rendering/: renderer.py
genetic_algo/: __init__.py  genetic_algo.py  run_logger.py  training.py  training_utils.py
include/: CNN.hpp  FFNN.hpp  NeuralNetwork.hpp  chromosome.hpp  cuda_helper.hpp  defs.h  defs.hpp  game.h  gamelogic.h  gamelogic.hpp  genetic.hpp  levelgen.h  levelgen.hpp  neural_network.hpp  randfuncts.hpp  rendering.h  rendering.hpp
models/: Agent.py
models/CNN/: CNN.py  __init__.py
models/DQN/: DQN.py  __init__.py
models/FFNN/: FFNN.py  __init__.py
models/FeedForwardDNN/: FeedForwardDNN.py  __init__.py  breeding.py  layer_construction.py
models/PseudoNaiveBayes/: PseudoNaiveBayes.py  __init__.py
models/utils/: __init__.py  custom_torch_layers.py  pytorch_layer_config.py
old/: CMakeLists.txt
old/include/: defs.hpp  gamelogic.h  gamelogic.hpp  genetic.hpp  levelgen.h  randfuncts.hpp  rendering.hpp
old/src/: gamelogic.cpp  levelgen.c  levelgen.cpp  main.c  pettingzoo.cpp  randfuncts.cpp  rendering.c
rendering/: __init__.py  renderer.py
sample_models/: FFDNN_2Layers.joblib  walking_cnn.joblib
scripts/: mod_128.sh  mod_256.sh  mod_64.sh  visualise_runs.py
src/: FFNN.cpp  NeuralNetwork.cpp  armadilloTest.cpp  chromosome.cpp  debug.cpp  debug_prog.cpp  game.c  gamelogic.c  gamelogic.cpp  genetic.c  genetic.cpp  levelgen.c  levelgen.cpp  main..cpp  main.c  main.cpp  main.cu  neural_network.cpp  pettingzoo.cpp  randfuncts.cpp  rendering.c  rendering.cpp  test.cpp  train.cpp  trainCPU.cpp  trainGPU.cpp  trainNN.cpp  visualise_runs.py
test/: CMakeLists.txt  game.cpp  game.h  main.cpp
training/: Breeder.py  Orchestra.py  Section.py  __init__.py  breeding.py  evaluation.py  misc.py  plot_run.py  plot_run_new.py  rng.py  run_logger.py  select_mutate.py  setup.py  utils.py
